[metadata]
# replace with your username:
name = wagtail_rest_pack
version = 0.0.1
author = Dominik Bydzovsky
author_email = dominikbydzovsky94@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = wagtail_rest_pack
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src